# bdi-rag-agents

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  pyproject.toml  resultados_desanonimizados.xlsx
.conda/: aau_token  environments.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
conf/: mapeo_condiciones.json
docs/: evaluacion_tecnica.md
docs/api/: README.md
docs/architecture/: README.md
docs/user_guide/: README.md
jupyter/datasets/: Relacion_Entrevistas_CEV.xlsx
jupyter/datasets/entrevistas/: IntruccionesData.txt
jupyter/notebooks/: analisis_estadistico.ipynb  analisis_jueces_ciegos.ipynb  analisisdescriptivo.ipynb  datos_figura_comparativa.json  extraer_respuestas.py  registrar_evaluacion.ipynb
scripts/: deploy.sh  registrar_evaluacion.py  setup.sh  test.sh
src/app/: api.py  index.html
src/evaluacion/: __init__.py  ablacion_contrafactual.py  banco_pruebas.py  correr_evaluacion_completa.py  correr_evaluacion_local.py  evaluador.py  evaluador_local.py  exportar_resultados_jueces.py  generador_trazas.py  metricas_lexicas.py  reporte_evaluacion.py
src/evaluacion/promedios/: bootstrap_ci_promedio.csv  detalle_completo_promedio.csv  kruskal_wallis_promedio.csv  mann_whitney_promedio.csv  (+7 more)
src/personalidades/: actor.py  crearActores.py  macro_bdi.py  micro_bdi.py  personalidad.py  prompts.py  sabiduria_convencional.py
src/rag/: embeddings.py  retrievers.py
src/servicio_conversacion/: generar_respuesta.py  reiniciar_conversacion.py
(+43 files in other folders)
