[project]
name = "trabajo-grado-sergio-sosa"
version = "0.1.0"
description = "Agentes conversacionales con personalidad BDI para el proyecto de grado"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    # LangChain / LangGraph
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "langchain-mongodb>=0.11.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-mongodb>=0.3.0",
    # LLMs / Embeddings
    "groq>=0.37.0",
    "openai>=2.21.0",
    "sentence-transformers>=5.2.0",
    # Base de datos
    "pymongo>=4.15.0",
    "motor>=3.7.0",
    # Utilidades
    "loguru>=0.7.0",
    "jinja2>=3.1.0",
    "tqdm>=4.67.0",
    "typing-extensions>=4.0.0",
    # Preprocesamiento
    "pandas>=3.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "nltk>=3.9.0",
]
